--- a/src/public/css/confirm.css
+++ b/src/public/css/confirm.css
@@ -43,3 +43,34 @@
     outline: none;
     border: none;
 }
+
+.confirm-table__header--name{
+    display: flex;
+    padding: 20px;
+}
+
+.confirm-table__header--name input{
+    width: 10%;
+}
+
+.confirm__buttons {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.confirm__button-submit{
+    background-color: #876b54;
+    color: white;
+    padding: 8px 25px;
+    border: none;
+    cursor: pointer;
+}
+
+.confirm__button-back{
+    background-color: #ffffff;
+    color: #876b54;
+    padding: 8px 25px;
+    border: 1px solid #876b54;
+    cursor: pointer;
+    margin-right: 20px;
+}
