--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -15,14 +15,32 @@ body{
 }
 
 .header__inner {
+    position: relative;
     margin: 0 auto;
     padding: 10px 15px;
     max-width: 1230px;
 }
 
 .header__logo {
+    display: inline-block;
     color: #876b54;
     text-decoration: none;
     font-weight: bold;
     font-size: 35px;
+}
+
+.btn-login, .btn-register {
+    position: absolute;
+    right: 1px;
+    top: 20px;
+    padding: 6px 30px;
+    background-color: rgba(183, 145, 112, 0.132);
+    color: #c99f7e;
+    text-decoration: none;
+    border: 2px solid #c99f7e;
+    font-weight: bold;
+}
+
+.btn-login:hover, .btn-register:hover {
+    cursor: pointer;
 }
