--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -27,6 +27,7 @@ body{
     text-decoration: none;
     font-weight: bold;
     font-size: 35px;
+    user-select: none;
 }
 
 .btn-login, .btn-register {
