--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -31,7 +31,7 @@
 .form__label--required {
     position: relative;
     padding-left: 5px;
-    color: rgb(255, 87, 87);
+    color: red;
     user-select: none;
 }
 
@@ -46,7 +46,7 @@
 .form__error {
     display: flex;
     min-height: 24px;
-    color: rgb(255, 144, 144);
+    color: red;
     user-select: none;
     text-align: left;
 }
