--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -1,4 +1,4 @@
-body{
+body {
     user-select: none;
 }
 
@@ -15,10 +15,130 @@ body{
     user-select: none;
 }
 
+.search-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.search-form input,
+.search-form select,
+.search-form button,
+.search-form .reset-btn {
+    height: 38px;
+    padding: 0 15px;
+    font-size: 14px;
+    border: 1px solid #ecddd0;
+    border-radius: 2px;
+    box-sizing: border-box;
+    color: #876b54;
+    background-color: #f1f1f1c1;
+}
+
+
+.search-form input[type="text"] {
+    width: 350px;
+}
+
+.search-form select[name="category_id"]{
+    width: 250px;
+}
+
+.search-form select[type="gender"]{
+    width: 50px;
+}
+
+.search-form input[type="date"] {
+    width: 150px;
+}
+
+.search-form button {
+    background-color: #876b54;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.search-form button:hover {
+    background-color: #6b5443;
+}
+
+.search-form .reset-btn {
+    background-color: #c99f7e;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-form .reset-btn:hover {
+    background-color: #cecece;
+}
+
+.admin__actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0;
+    width: 100%;
+}
+
+.export-btn {
+    background-color: #c4c4c4c7;
+    color: #876b54;
+    padding: 8px 20px;
+    text-decoration: none;
+    border-radius: 2px;
+}
+
+.export-btn:hover {
+    background-color: #6b5443;
+}
+
+.admin__pagination {
+    display: flex;
+    align-items: center;
+}
+
+.admin__pagination a,
+.admin__pagination span {
+    padding: 8px 12px;
+    margin: 0 3px;
+    text-decoration: none;
+    color: #333;
+    border: 1px solid #ddd;
+    background-color: white;
+}
+
+.admin__pagination .current {
+    font-weight: bold;
+    color: white;
+    background-color: #876b54;
+    border-color: #876b54;
+}
+
+.admin__pagination a:hover {
+    background-color: #f5f5f5;
+    border-color: #876b54;
+}
+
+.admin__pagination .disabled {
+    padding: 8px 12px;
+    margin: 0 3px;
+    color: #ccc;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    cursor: not-allowed;
+}
+
 .admin__table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    height: 600px;
 }
 
 .admin__table th,
@@ -35,7 +155,7 @@ body{
 .detail-btn {
     background-color: rgba(183, 145, 112, 0.132);
     color: #c99f7e;
-    border-color: #c99f7e;
+    border: 1px solid #c99f7e;
     padding: 5px 15px;
     cursor: pointer;
     border-radius: 2px;
@@ -133,62 +253,4 @@ body{
 
 .delete-btn:hover {
     background-color: #c82333;
-}
-
-.admin__actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px 0;
-}
-
-.export-btn {
-    background-color: #c4c4c4;
-    color: white;
-    padding: 8px 20px;
-    text-decoration: none;
-    border-radius: 2px;
-}
-
-.export-btn:hover {
-    background-color: #6b5443;
-}
-
-.admin__pagination {
-    display: flex;
-    align-items: center;
-}
-
-.admin__pagination a,
-.admin__pagination span {
-    padding: 8px 12px;
-    margin: 0 3px;
-    text-decoration: none;
-    color: #333;
-    border: 1px solid #ddd;
-    background-color: white;
-}
-
-.admin__pagination .current {
-    font-weight: bold;
-    color: white;
-    background-color: #876b54;
-    border-color: #876b54;
-}
-
-.admin__pagination a:hover {
-    background-color: #f5f5f5;
-    border-color: #876b54;
-}
-
-.reset-btn {
-    background-color: #c99f7e;
-    color: white;
-    padding: 8px 20px;
-    text-decoration: none;
-    border-radius: 2px;
-}
-
-.reset-btn:hover {
-    background-color: #c99f7e;
 }
