管理画面とエクスポート機能の実装

--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -75,7 +75,7 @@ body {
 }
 
 .search-form .reset-btn:hover {
-    background-color: #cecece;
+    background-color: #876b54;
 }
 
 .admin__actions {
@@ -141,14 +141,24 @@ body {
     height: 600px;
 }
 
+.admin__table td:last-child {
+    text-align: center;
+}
+
 .admin__table th,
 .admin__table td {
-    border: 1px solid #ddd;
+    border: none;
+    border-bottom: 1px solid #ddd;
     padding: 10px;
     text-align: left;
 }
 
 .admin__table th {
+    color: white;
+    background-color: #876b54;
+}
+
+.admin__table tbody tr:hover {
     background-color: #f5f5f5;
 }
 
@@ -162,7 +172,7 @@ body {
 }
 
 .detail-btn:hover {
-    background-color: #ffffff;
+    background-color: #876b54;
 }
 
 .modal {
@@ -186,21 +196,16 @@ body {
     background-color: white;
     border-radius: 8px;
     width: 90%;
-    max-width: 500px;
-    max-height: 80vh;
-    overflow-y: auto;
+    max-width: 800px;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .modal__header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
     padding: 15px 20px;
-    border-bottom: 1px solid #ddd;
-}
-
-.modal__header h3 {
-    margin: 0;
 }
 
 .modal__close {
@@ -217,27 +222,39 @@ body {
 
 .modal__body {
     padding: 20px;
+    flex: 1;
+    display: flex;
 }
 
 .modal__table {
     width: 100%;
+    height: 100%;
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-.modal__table th,
-.modal__table td {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-    text-align: left;
+.modal__table tr {
+    display: flex;
+    align-items: center;
 }
 
 .modal__table th {
     width: 40%;
-    color: #666;
+    color: #876b54;
+    padding: 15px;
+    text-align: left;
+}
+
+.modal__table td {
+    width: 60%;
+    padding: 15px;
+    text-align: left;
 }
 
 .modal__footer {
     padding: 15px 20px;
-    border-top: 1px solid #ddd;
     text-align: center;
 }
 
