--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -138,7 +138,7 @@ body {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
-    height: 600px;
+    min-height: auto;
 }
 
 .admin__table td:last-child {
