--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -148,7 +148,7 @@ body {
 .admin__table td {
     border: none;
     border-bottom: 1px solid #ddd;
-    padding: 10px;
+    padding: 20px 10px;
     text-align: left;
 }
 
@@ -156,6 +156,7 @@ body {
     color: white;
     background-color: #876b54;
 }
+
 
 .admin__table tbody tr:hover {
     background-color: #f5f5f5;
